--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,15 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Startpage",
+  "name": "Startpage",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "startpage.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#736598",
+  "background_color": "#736598"
 }
